# TTS_DATA

./: .gitignore  README.md  download_gdrive.py  load_data.py  process_pho.sh  requirements.txt  requirements_crawler.txt  run_eval_f5_vivos.py  run_eval_pipeline.py  split_pho.py  test_f5_single.py  test_pipeline.py  test_vivos_finetuned.py  upload_wavs.sh
Craw_data/: Begin.json  Begin.xlsx  create_mapping.py  debug_phase1.py  denoise_deepfilter.py  move_and_zip.py  move_files.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.py  run_phase6.py  (+2 more)
Custom_TTS/: README.md  fine_tune.sh  pyproject.toml  train.sh
Custom_TTS/src/custom_tts/: api.py  socket_server.py
Custom_TTS/src/custom_tts/configs/: F5TTS_Base.yaml  F5TTS_Small.yaml  SemanticF5TTS_Base.yaml
Custom_TTS/src/custom_tts/eval/: eval_infer_batch.py  eval_librispeech_test_clean.py  eval_seedtts_testset.py  utils_eval.py
Custom_TTS/src/custom_tts/infer/: README.md  infer_cli.py  infer_gradio.py  speech_edit.py  utils_infer.py
Custom_TTS/src/custom_tts/model/: __init__.py  cfm.py  dataset.py  semantic.py  trainer.py  utils.py
Custom_TTS/src/custom_tts/model/backbones/: dit.py  mmdit.py  unett.py
Custom_TTS/src/custom_tts/scripts/: count_max_epoch.py  count_params_gflops.py
Custom_TTS/src/custom_tts/train/: finetune_cli.py  finetune_gradio.py  init_semantic_checkpoint.py  train.py
Custom_TTS/src/custom_tts/train/datasets/: prepare_csv_wavs.py  prepare_emilia.py  prepare_libritts.py  prepare_ljspeech.py  prepare_semantic_hubert.py  prepare_wenetspeech4tts.py
Preprocess/: asr.py  (+12 more)
(+110 files in other folders)
