[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-tts"
version = "0.1.0"
description = "Custom semantic-conditioned F5-TTS experiment"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.33.0",
    "bitsandbytes>0.37.0; platform_machine != 'arm64' and platform_system != 'Darwin'",
    "cached_path",
    "click",
    "datasets",
    "ema_pytorch>=0.5.2",
    "gradio>=3.45.2",
    "hydra-core>=1.3.0",
    "jieba",
    "librosa",
    "matplotlib",
    "numpy<=1.26.4",
    "pydub",
    "pypinyin",
    "safetensors",
    "soundfile",
    "tomli",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchdiffeq",
    "tqdm>=4.65.0",
    "transformers",
    "transformers_stream_generator",
    "vocos",
    "wandb",
    "x_transformers>=1.31.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
"custom-tts_train" = "custom_tts.train.train:main"
"custom-tts_infer-cli" = "custom_tts.infer.infer_cli:main"
"custom-tts_prepare-semantic-hubert" = "custom_tts.train.datasets.prepare_semantic_hubert:cli"
"custom-tts_init-semantic-ckpt" = "custom_tts.train.init_semantic_checkpoint:cli"
